--- a/.github/actions/secure-download-artifact/action.yml
+++ b/.github/actions/secure-download-artifact/action.yml
@@ -85,7 +85,7 @@ runs:
 
     - name: Compute the hash
       id: compute
-      uses: slsa-framework/slsa-github-generator/.github/actions/compute-sha256@main
+      uses: Water-Melon/slsa-github-generator/.github/actions/compute-sha256@v3.0.0
       with:
         path: "${{ steps.validate-path.outputs.file_path }}"
 
