--- a/actions/nodejs/secure-attestations-download/action.yml
+++ b/actions/nodejs/secure-attestations-download/action.yml
@@ -30,7 +30,7 @@ runs:
   using: "composite"
   steps:
     - name: Download the attestations
-      uses: slsa-framework/slsa-github-generator/.github/actions/secure-download-folder@main
+      uses: Water-Melon/slsa-github-generator/.github/actions/secure-download-folder@v3.0.0
       with:
         name: ${{ inputs.name }}
         path: ${{ inputs.path }}
