--- a/actions/nodejs/secure-package-download/action.yml
+++ b/actions/nodejs/secure-package-download/action.yml
@@ -29,7 +29,7 @@ runs:
   using: "composite"
   steps:
     - name: Download the package
-      uses: slsa-framework/slsa-github-generator/.github/actions/secure-download-artifact@main
+      uses: Water-Melon/slsa-github-generator/.github/actions/secure-download-artifact@v3.0.0
       with:
         name: ${{ inputs.name }}
         path: ${{ inputs.path }}
