--- a/internal/builders/nodejs/action.yml
+++ b/internal/builders/nodejs/action.yml
@@ -85,9 +85,9 @@ runs:
     # when multiple workflows run concurrently.
     - name: Generate random 16-byte value (32-char hex encoded)
       id: rng
-      uses: slsa-framework/slsa-github-generator/.github/actions/rng@main
+      uses: Water-Melon/slsa-github-generator/.github/actions/rng@v3.0.0
 
-    - uses: slsa-framework/slsa-github-generator/.github/actions/secure-upload-artifact@main
+    - uses: Water-Melon/slsa-github-generator/.github/actions/secure-upload-artifact@v3.0.0
       id: upload
       with:
         name: "${{ steps.rng.outputs.random }}-package.tgz"
